update project list, remove image slider, add instagram

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<nav>
 				<a href="https://github.com/choww" target="_blank"><i class="fa fa-github"></i> github</a> 
 				<a href="https://twitter.com/chowcar" target="_blank"><i class="fa fa-twitter"></i> twitter</a> 
+				<a href="https://instagram.com/chowwwmein" target="_blank"><i class="fa fa-instagram"></i> instagram</a> 
 				<a href="https://ca.linkedin.com/in/carmenchoww" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a> 
 				<a href="#contact" id="contact-link"><i class="fa fa-pencil-square-o"></i> contact</a>
 			</nav>
@@ -39,22 +40,21 @@
       <h4>Things I build in my spare time! More on my <a href="https://github.com/choww" target="_blank">github</a></h4>
 			<hr>
       <article>
-        <h3><a href="https://github.com/choww/journey" target="_blank">Journey</a></h3>
-        <p><span class="status incomplete">In progress</span></p>
+        <h3><a href="https://github.com/choww/dev-notebook" target="_blank">DevBook</a></h3>
+        <p><span class="status complete">version 1</span> - <a href="https://devbase.herokuapp.com" target="_blank" rel="noopener noreferrer">live</a></p>
         <p>
-          I love <strong>productivity apps</strong>, so I started working on a <span class="underline">time tracker & task manager</span> for developers. Complete with analytics to show breakdown of time spent working on certain languages/frameworks. 
+          After a journal deletion scare on another blog hosting provider, I decided to create my own blog platform! This was a way for me to explore more of Django's features and dive deeper into Vue.js. All blog posts are format-able via HTML currently, but I would like to introduce either formatting through Markdown or implement a WYSIWYG editor. 
         </p>
-        <div class="stack">Rails 5, Angular.js, PostgreSQL</div>
+        <div class="stack">Django, Vue.js, Bulma, PostgreSQL</div>
       </article>
 
       <article>
-        <h3><a href="https://github.com/choww/rotten-mongoose" target="_blank">Rotten Mongoose</a></h3>
-        <p><span class="status complete">version 1</span></p>
+        <h3><a href="https://github.com/choww/coffee-run" target="_blank">Coffee Run</a></h3>
+        <p><span class="status incomplete">in progress</span></p>
         <p>
-          A <span class="underline">Rotten Tomatoes clone</span> I during coding bootcamp. A movie review site that lets users see and submit movies as well as reviews for those movies.<br>
-          Movie lists and reviews are dynamically updated via polling with AJAX.
+          I love coffee shops and would like a way to keep track of places I've been and store additional info such as which locations have the best wifi and the most amount of electrical outlets! This app was a natural response to that interest and it was also a great excuse to finally learn how to use Webpack!
         </p>
-        <div class="stack">Rails 4, jQuery, Bootstrap/LESS, PostgreSQL</div>
+        <div class="stack">Django, React.js, Bulma, PostgreSQL</div>
       </article>
 
       <article>
@@ -81,16 +81,6 @@
       </article>
 		</section>
 
-		<section>
-			<h2>When I'm not coding...</h2>
-			<hr>
-			<div class="img-slider">
-				<div><img src="img/hike.jpg"></div>
-				<div><img src="img/ski.jpg"></div>
-				<div><img src="img/climb.jpg"></div>
-			</div>
-		</section>
-
 		<footer>
 			<a name="contact"></a>
 			
@@ -106,7 +96,6 @@
 		<div class="to-top"><a href="#top-of-page"><i class="fa fa-arrow-circle-up"></i> Top</a></div>
 
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-		<script type="text/javascript" src="js/slick.min.js"></script>
 		<script src="js/script.js"></script>
 
 	</body>
