--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Carmen Chow</a></h1>
 					<p>Web developer, former scientist, <br/>
-             huge fan of ramen.</p>
+             huge fan of ramen & podcasts.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -52,11 +52,11 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Hello</h2>
+										<h2>Hello!</h2>
                     <p>I love to code and I do it for a living!</p>
 									</header>
                   <p>
-                    Currently working with Ruby on Rails, Vue.js, and jQuery, and having fun with Go, React.js, Django, and GraphQL! 
+                    Currently working with Feathers.js and Vue.js, but done plenty with Ruby on Rails and jQuery in the past. Also having fun doing side projects with Go, React.js, Django, and GraphQL!  
                   </p>
 								</div>
 							</section>
