fix textarea height

--- a/scriptify.html
+++ b/scriptify.html
@@ -3,11 +3,18 @@
   <head>
     <title>Scriptify Authentication</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <style>
+      textarea.materialize-textarea {
+        height: 300px;
+      }
+    </style>
+
   </head>
 
   <body>
     <div class="container">
-      <h1>Scriptify Authentication</h1>
+      <h1 class="green-text">Scriptify Authentication</h1>
       
       <p>Thank you! Please copy and paste the following into the Scriptify CLI:</p>
 
