--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Carmen Chow</a></h1>
-					<p>Web developer, former scientist, <br/>
+					<p>Dev ops, Web developer, <br/>
              huge fan of ramen & podcasts.</p>
 				</header>
 				<nav id="nav">
@@ -53,10 +53,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hello!</h2>
-                    <p>I love to code and I do it for a living!</p>
 									</header>
                   <p>
-                    Currently working with Feathers.js and Vue.js, but done plenty with Ruby on Rails and jQuery in the past. Also having fun doing side projects with Go, React.js, Django, and GraphQL!  
+                    Currently doing infrastructure work using Kubernetes and AWS Cloudformation, but done plenty with Terraform, Express.js, and Vue.js in the past. I love working on productivity & data visualizaton tools in my spare time.
                   </p>
 								</div>
 							</section>
@@ -73,14 +72,6 @@
 												<h4>DevBook</h4>
                         <p>After a journal deletion scare on another blogging platform, I decided to create my own! All blog posts are format-able via HTML currently, but I would like to introduce either formatting through Markdown or implement a WYSIWYG editor.</p>
                         <h5>Django, Vue.js, Bulma, PostgreSQL</h5>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/choww/coffee-run" class="image"><img src="images/code.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Coffee Run</h4>
-                        <p>I love coffee shops and wanted a way to keep track of places I've been! It was also a great excuse to finally learn how to use Webpack!</p>
-                        <h5>Django, React.js, Bulma, PostgreSQL</h5>
 											</div>
 										</article>
 										<article>
