--- a/about.html
+++ b/about.html
@@ -5,14 +5,20 @@ permalink: /about/index.html
 description: "Some description about Victor Igor..."
 ---
 
-<img itemprop="image" class="img-rounded about_perfil" src=" https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png" alt="My profile">
+<h1>Hi! 👋</h1> 
 
-<h2>My projects</h2>
+<h2>About the Blog</h2>
 
 <div class="aboutme">
-	<ul class="recent">
-		{% for project in site.projects %}
-	    	<li><a href="{{ project.url}}"><h3 class="project-name" itemprop="name">{{ project.name }}</h3></a></li>
-	    {% endfor %}
-	</ul>
+  <p>I started this blog to document all the things I learn and to write the blog posts I wish I had access to when I was trying to learn everything. </p>
+</div>
+
+<h2>About Me</h2>
+
+<img itemprop="image" class="img-rounded about_perfil" src="{{ site.url }}assets/img/avatar.jpg" alt="My profile">
+
+<div class="aboutme">
+  <p>I'm an infrastructure developer from Vancouver, Canada 🇨🇦. I mostly use Kubernetes (EKS), CloudFormation, and Jenkins at work but I like to learn about all kinds of things I don't understand. I'm also trying to learn Go in my spare time when I'm not playing Overwatch or listening to podcasts</p>
+
+  <p>Email: <a href="mailto:carmenchow@protonmail.com">carmenchow@protonmail.com</a></p>
 </div>
